V0.0.2.8:
- Moved Movie section scaning away from native Python, and back to the Plex framework
  - This means less impact on the Plex Media Server while exporting a Movie section

V0.0.2.7:
- Fixed issue with TV-Series in Extreme 2 level multiplied
- Started to reorganize code into sub files, making development a tad more easy

V0.0.2.6:
- Added new export level to Movies, called "Extreme 3"
  - Allows export of the path where metadata is stored, like subtitles
- Added new export level to TV-Shows, called "Extreme 2"
  - Allows export of the path where metadata is stored, like subtitles

V0.0.2.5:
- Added export of Audio Language for movies and TV-Shows
- Added export of Subtitle Language for movies and TV-Shows
*** Above was made by a new lost soul here......CCarpo

V0.0.2.4:
- Fixed issue with some requests having token in the url, instead of in the header
- Added Simple and basic mode to Music sections

V0.0.2.3:
- Added posibillity to reset the local cached token from prefs, if user deletes the Plex2CSV from the device list

V0.0.2.2:
- Added export of labels for Movies in basic mode
	ToDO: get it for TV-Shows as well
- Added support for the new fancy Home mode
	Note: If using Home mode, then you must configure Plex2CSV in the settings to authenticate towards plex.tv

V0.0.2.1:
- Made a buh-buh....But fixed now, causing TV-Shows to fail in Extended or above mode

V0.0.2.0:
- Added "View Count" to TV-Shows in Basic Mode
- Added "Last Viewed" to TV-Shows in Basic Mode
- HUGE speed increase, when exporting TV-Shows when running Extended mode or above
- Changed fieldname "Watched" in Movie export to "View Count"
- Added "Last Viewed" to Movies in Basic mode
- Moved away from Plex Channel framework for grapping sections and episodes, and instead use native Python calls
- Speed increase when calculating amount of extras for Movies
- Fixed so extras doesn't mess up the part information for movies in level Extreme2

V0.0.1.23: