@@ -1,6 +1,14 @@
 V0.0.2.8:
-- Moved Movie section scaning away from native Python, and back to the Plex framework
-  - This means less impact on the Plex Media Server while exporting a Movie section
+- General
+	-	Main menu now shows the relevant sections with their own icons
+- Movies
+	- Moved Movie section scaning away from native Python, and back to the Plex framework.
+	  This means less impact on the Plex Media Server while exporting a Movie section, since we now process
+	  items in chunks of 20
+	- Movie related stuff now in it's own file, making is a tad more easy to digest when coding
+- Audio
+	- Moved Audio related code into it's own file, making coding more easy to digest
+
 
 V0.0.2.7:
 - Fixed issue with TV-Series in Extreme 2 level multiplied
